# listen

./: .env.example  .gitignore  README.md  package.json  start.sh  watchlist.default.json
.knowledge/: INDEX.md  architecture.md  competitive-analysis.md  datasets.md  intent-vectors.md  session-log.md  troubleshooting.md
docs/: pitch-deck.html
experts/: program.md  pyproject.toml
experts/data/multitool/: test.jsonl  train.jsonl  valid.jsonl
experts/data/music/: test.jsonl  train.jsonl  valid.jsonl
experts/data/wellbeing/: test.jsonl  train.jsonl  valid.jsonl
experts/experts/: __init__.py  config.py  evaluate.py  evaluate_multitool.py  evaluate_multitool_integration.py  exercise.py  experiment.py  generate.py  generate_multitool.py  serve.py  serve_multitool.py  train.py  train_multitool.py
experts/models/multitool/: baseline_eval.json  best_meta.json  eval_test.json  results.tsv  train_config.yaml  train_meta.json
experts/models/multitool/best_adapters.safetensors/: 0000050_adapters.safetensors  0000100_adapters.safetensors  0000150_adapters.safetensors  0000200_adapters.safetensors  0000250_adapters.safetensors  0000300_adapters.safetensors  0000350_adapters.safetensors  0000400_adapters.safetensors  0000450_adapters.safetensors  adapter_config.json
experts/models/music/: eval_test.json  train_config.yaml  train_meta.json
experts/models/wellbeing/: eval_test.json  train_config.yaml  train_meta.json
scripts/: download-datasets.py  download-playlists.ts  health-check.ts  inject-test.ts  map-datasets.py  merge-training-data.py
src/listen/: analyzer.ts  (+16 more)
(+25 files in other folders)
