[project]
name = "experts"
version = "0.1.0"
description = "Per-skill expert models for listen — fine-tuned on MLX with Qwen3.5"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
generate = "experts.generate:main"
evaluate = "experts.evaluate:main"
train = "experts.train:main"
serve = "experts.serve:main"
generate-multitool = "experts.generate_multitool:main"
evaluate-multitool = "experts.evaluate_multitool:main"
train-multitool = "experts.train_multitool:main"
serve-multitool = "experts.serve_multitool:main"
experiment = "experts.experiment:main"
exercise = "experts.exercise:main"
